fix: make static list unmodifiable